--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div>
     <a href="{{ "/" | prepend: site.baseurl | replace: '//', '/' }}">
     {% assign owner_first_name = site.owner | split: " " %}
-    <h1>{{ owner_first_name[0] | downcase }}的个人博客</h1>
+    <h1>{{ owner_first_name[0] | downcase }}个人博客的软件区</h1>
     </a>
     <div class="header-links">
       {% include links.html %}
