--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <a href="https://creativecommons.org/licenses/by-nc/3.0/deed.en_US">
+  <a href="https://www.longz7z8.com.cn/">
     <span>
         <b>{{ site.owner}}</b>
     </span>
